argocd/demo/demo-spring-boot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-spring-boot
  labels:
    service: demo-spring-boot
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30000
  selector:
    service: demo-spring-boot
