argocd/demo/demo-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          demo-network: "true"
  podSelector:
    matchLabels:
      demo-network: "true"
